Fixed Behavior legend text alignment on manage clients page

--- a/react-vite/src/components/DailyCharts/daily-chart.css
+++ b/react-vite/src/components/DailyCharts/daily-chart.css
@@ -65,6 +65,8 @@
 
   .legendCompContain {
     width: 100%;
+    padding: 0 0 15px 0;
+    text-align: center;
   }
 
   .chartTotalsContain {
